update Document from editorial Record Workflow
